--- a/sass/inc/_reset.scss
+++ b/sass/inc/_reset.scss
@@ -1,6 +1,8 @@
 
 * {
   box-sizing: border-box;
+  outline: none;
+  position: relative;
 }
 
 html, body {
